fix resizing jump

--- a/services/app-web/src/components/Header/Header.module.scss
+++ b/services/app-web/src/components/Header/Header.module.scss
@@ -92,7 +92,7 @@
     }
 }
 
-@media (min-width: 63px) and (max-width: 1280px) {
+@include uswds.at-media-max('desktop') {
     .divider {
         position: absolute;
         display: none;
@@ -105,7 +105,6 @@
         justify-content: space-between;
         padding-top: 1rem;
         padding-bottom: 1rem;
-
         li {
             border-top: none !important;
             margin-top: 1rem;
@@ -132,7 +131,6 @@
             }
         }
     }
-
 }
 
 .landingPageHeading {
